--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,10 @@
 <resources>
     <string name="app_name">Footbapp</string>
     <string name="title_home">Home</string>
+    <string name="title_overview">Overview</string>
     <string name="title_dashboard">Dashboard</string>
     <string name="title_notifications">Notifications</string>
+    <string name="All_leagues">All Football Leagues: </string>
+    <string name="All_teams">All Teams in the </string>
+    <string name="action_search">Search</string>
 </resources>
