--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,9 +2,12 @@
     <string name="app_name">Footbapp</string>
     <string name="title_home">Home</string>
     <string name="title_overview">Overview</string>
-    <string name="title_dashboard">Dashboard</string>
-    <string name="title_notifications">Notifications</string>
+    <string name="title_favorite_teams">Favorite Teams</string>
+    <string name="title_settings">Settings</string>
     <string name="All_leagues">All Football Leagues: </string>
     <string name="All_teams">All Teams in the </string>
     <string name="action_search">Search</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
