made a start on favorite team fragment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="title_overview">Overview</string>
     <string name="title_favorite_teams">Favorite Teams</string>
     <string name="title_settings">Settings</string>
-    <string name="All_leagues">All Football Leagues: </string>
+    <string name="All_leagues">All Football Leagues </string>
     <string name="All_teams">All Teams in the </string>
     <string name="action_search">Search</string>
 
